# myopengl

./: CMakeLists.txt
objects/: vampiric.dae
src/: animation.h  animator.h  animdata.h  assimp_glm_helpers.h  bone.h  main.cpp  model_animation.h
